--- a/_posts/2025-08-18-Git常用命令.md
+++ b/_posts/2025-08-18-Git常用命令.md
@@ -1,7 +1,7 @@
 ```yaml
 title: Git常用命令
 description: Git的常用命令.
-author: cotes
+author: WZ
 date: 2025-08-18 21:03:00 +0800
 categories: [Git]
 tags: [Git命令]
