--- a/_posts/2025-08-18-Git命令.md
+++ b/_posts/2025-08-18-Git命令.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: Git command
-description: >-
-  Git的常用命令.
+description: Git的常用命令.
 author: WZ
 date: 2025-08-18 22:46:00 +0800
 categories: [Git, Command]
