--- a/_posts/2025-08-18-Git命令.md
+++ b/_posts/2025-08-18-Git命令.md
@@ -2,7 +2,7 @@
 layout: post
 title: Git command
 description: Git的常用命令.
-author: WZ
+author: wz
 date: 2025-08-18 22:46:00 +0800
 categories: [Git, Command]
 tags: [Git command]
