--- a/_posts/2025-08-19-个人简介.md
+++ b/_posts/2025-08-19-个人简介.md
@@ -7,6 +7,10 @@ date: 2025-08-19 18:13:00 +0800
 categories: [个人简介]
 # tags: [Git command]
 pin: True
+image:
+  path: /paperimg/2025-08-19/devices-mockup.png
+#   lqip: 
+#   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
 
 
