--- a/_posts/2025-08-19-个人简介.md
+++ b/_posts/2025-08-19-个人简介.md
@@ -8,7 +8,7 @@ categories: [个人简介]
 # tags: [Git command]
 pin: True
 image:
-  path: /paperimg/2025-08-19/devices-mockup.png
+  path: /paperimg/2025-08-19/avatar.jpg
 #   lqip: 
 #   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
