--- a/_posts/2025-08-19-个人简介.md
+++ b/_posts/2025-08-19-个人简介.md
@@ -7,7 +7,7 @@ date: 2025-08-19 18:13:00 +0800
 categories: [个人简介]
 # tags: [Git command]
 pin: True
-image:
+image:  # 缩略图显示
   path: /paperimg/2025-08-19/avatar.jpg
 #   lqip: 
 #   alt: Responsive rendering of Chirpy theme on multiple devices.
