--- a/_posts/2025-08-19-个人简介.md
+++ b/_posts/2025-08-19-个人简介.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 个人简介
-description: Hello！欢迎访问我的个人博客。我是wz，这里记录着我在技术学习和个人成长路上的所思所得。.
+description: Hello！欢迎访问我的个人博客。我是wz，这里记录着我在技术学习和个人成长路上的所思所得。
 author: wz
 date: 2025-08-19 18:13:00 +0800
 categories: [个人简介]
