--- a/_posts/2025-08-19-个人简介.md
+++ b/_posts/2025-08-19-个人简介.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 个人简介
-description: Hello！欢迎访问我的个人博客。我是wz，这里记录着我在技术学习和个人成长路上的所思所得。
+description: 个人简介.
 author: wz
 date: 2025-08-19 18:13:00 +0800
 categories: [个人简介]
@@ -12,5 +12,44 @@ image:  # 缩略图显示
 #   lqip: 
 #   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
+
+## 👋 欢迎来到我的博客
+
+你好！我是**wz**，欢迎来到我的个人技术博客。
+
+## 🚀 关于我
+
+我是一名热爱技术的开发者，专注于学习和分享编程相关的知识与经验，目前在读硕士，喜欢探索AI领域。在这个数字化的时代，我相信技术的力量能够改变世界，也希望通过自己的学习和实践，为技术社区贡献一份力量。
+
+## 💻 技术栈
+
+- **编程语言**：Python
+- **版本控制**: Git/GitHub
+- **开发工具**: 持续学习中...
+- **其他技术**: 不断探索新技术领域
+
+## 📝 博客内容
+
+在这里，你可以找到：
+
+- **技术教程**: 实用的编程技巧和命令总结
+- **学习笔记**: 我在技术学习路上的心得体会
+- **问题解决**: 开发过程中遇到的问题及解决方案
+- **技术分享**: 值得推荐的工具、资源和最佳实践
+
+## 🎯 我的理念
+
+> 学而时习之，不亦说乎
+
+我相信最好的学习方式就是**学习-实践-分享**。通过记录和分享，不仅能够加深自己的理解，也希望能够帮助到有同样需求的朋友们。
+
+## 📫 联系我
+
+- **GitHub**: [QQ-Stars](https://github.com/QQ-Stars)
+- **Email**: 13603706832@163.com
+
+---
+
+感谢你的访问，希望我的分享对你有所帮助。如果你有任何问题或建议，欢迎随时与我交流！
 
 
