--- a/_posts/2025-08-19-Markdown格式代码.md
+++ b/_posts/2025-08-19-Markdown格式代码.md
@@ -4,7 +4,7 @@ title: Markdown美化指南
 description: 详细的Markdown美化技巧和代码示例，让你的文档更加美观专业。
 author: wz
 date: 2025-08-19 20:12:00 +0800
-categories: [教程, Markdown]
+categories: [Markdown]
 tags: [Markdown, 美化, 教程]
 pin: True
 ---
