--- a/_posts/2025-08-25-大语言模型幻觉检测综述.md
+++ b/_posts/2025-08-25-大语言模型幻觉检测综述.md
@@ -15,7 +15,7 @@ pin: False
 
 |                             标题                             |          作者          |                  期刊                   | 年份 |                           简要描述                           | 链接                                                         |
 | :----------------------------------------------------------: | :--------------------: | :-------------------------------------: | :--: | :----------------------------------------------------------: | ------------------------------------------------------------ |
-| A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions | L Huang, W Yu, W Ma 等 | ACM Transactions on Information Systems | 2025 | 提出幻觉的创新分类法，探讨导致幻觉的因素，并讨论未来研究方向，如大视觉语言模型中的幻觉 | [Paper]([A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions ) |
+| A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions | L Huang, W Yu, W Ma 等 | ACM Transactions on Information Systems | 2025 | 提出幻觉的创新分类法，探讨导致幻觉的因素，并讨论未来研究方向，如大视觉语言模型中的幻觉 | [Paper](https://dl.acm.org/doi/10.1145/3703155 ) |
 |                                                              |                        |                                         |      |                                                              |                                                              |
 
 
